--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -15,43 +15,43 @@
         <button id="xButton" onclick="chooseX()">X</button>
         <button id="oButton" onclick="chooseO()">O</button>
 
-        <div id="grid"></div>
-            <input type="text" class="boxes" id="grid1" onclick=
+        <section>
+            <input type="text" class="grid" id="grid1" onclick=
                 "play1(); results();" readonly>
 
-            <input type="text" class="boxes" id="grid2" onclick=
+            <input type="text" class="grid" id="grid2" onclick=
                 "play2(); results();" readonly>
 
-            <input type="text" class="boxes" id="grid3" onclick=
+            <input type="text" class="grid" id="grid3" onclick=
                 "play3(); results();" readonly>
             <br><br>
 
-            <input type="text" class="boxes" id="grid4" onclick=
+            <input type="text" class="grid" id="grid4" onclick=
                 "play4(); results();" readonly>
                 
-            <input type="text" class="boxes" id="grid5" onclick=
+            <input type="text" class="grid" id="grid5" onclick=
                 "play5(); results();" readonly>
 
-            <input type="text" class="boxes" id="grid6" onclick=
+            <input type="text" class="grid" id="grid6" onclick=
                 "play6(); results();" readonly>
             <br><br>
 
-            <input type="text" class="boxes" id="grid7" onclick=
+            <input type="text" class="grid" id="grid7" onclick=
                 "play7(); results();" readonly>
 
-            <input type="text" class="boxes" id="grid8" onclick=
+            <input type="text" class="grid" id="grid8" onclick=
                 "play8(); results();" readonly>
 
-            <input type="text" class="boxes" id="grid9" onclick=
+            <input type="text" class="grid" id="grid9" onclick=
                 "play9(); results();" readonly>
-        </div>
+        </section>
 
         <p><button id="resetButton" onclick="reset()">Reset Game</button></p>
         <p><button class="hidden" id="movesButton" onclick="showHistory()">Show moves history</button></p>
 
         <img class="hidden" id="tttgrid2" src="image/photo2.png"/>
 
-        <div id="grid2"></div>
+        <section>
             <input type="text" class="hidden boxes1" id="grid21" readonly>
 
             <input type="text" class="hidden boxes1" id="grid22" readonly>
@@ -71,7 +71,7 @@
             <input type="text" class="hidden boxes1" id="grid28" readonly>
 
             <input type="text" class="hidden boxes1" id="grid29" readonly>
-        </div>
+        </section>
         
         <button class="hidden" id="prevButton" onclick="previous()">Previous</button>
         <button class="hidden" id="nextButton" onclick="next()">Next</button>
