--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -16,34 +16,25 @@
         <button id="oButton" onclick="chooseO()">O</button>
 
         <section>
-            <input type="text" class="grid" id="grid1" onclick=
-                "play1(); results();" readonly>
+            <input type="text" class="grid" id="grid1" data-row="0" data-column="0" readonly>
 
-            <input type="text" class="grid" id="grid2" onclick=
-                "play2(); results();" readonly>
+            <input type="text" class="grid" id="grid2" data-row="0" data-column="1" readonly>
 
-            <input type="text" class="grid" id="grid3" onclick=
-                "play3(); results();" readonly>
+            <input type="text" class="grid" id="grid3" data-row="0" data-column="2" readonly>
             <br><br>
 
-            <input type="text" class="grid" id="grid4" onclick=
-                "play4(); results();" readonly>
+            <input type="text" class="grid" id="grid4" data-row="1" data-column="0" readonly>
                 
-            <input type="text" class="grid" id="grid5" onclick=
-                "play5(); results();" readonly>
+            <input type="text" class="grid" id="grid5" data-row="1" data-column="1" readonly>
 
-            <input type="text" class="grid" id="grid6" onclick=
-                "play6(); results();" readonly>
+            <input type="text" class="grid" id="grid6" data-row="1" data-column="2" readonly>
             <br><br>
 
-            <input type="text" class="grid" id="grid7" onclick=
-                "play7(); results();" readonly>
+            <input type="text" class="grid" id="grid7" data-row="2" data-column="0" readonly>
 
-            <input type="text" class="grid" id="grid8" onclick=
-                "play8(); results();" readonly>
+            <input type="text" class="grid" id="grid8" data-row="2" data-column="1" readonly>
 
-            <input type="text" class="grid" id="grid9" onclick=
-                "play9(); results();" readonly>
+            <input type="text" class="grid" id="grid9" data-row="2" data-column="2" readonly>
         </section>
 
         <p><button id="resetButton" onclick="reset()">Reset Game</button></p>
